# libaco

./: Makefile  README.md  aco.h  meson.build
src/: aco.h  meson.build
test/: meson.build
